# digital_soul

./: .gitignore  README.md  app.py  config.py  evaluate.py  pyproject.toml
checkpoints/: text_only_baseline.pth
src/: dataset.py  features.py  model.py  trainer.py  utils.py
